Bug 453608 - Quick launch applet no longer starts program, opens .desktop files with associated application
Summary: Quick launch applet no longer starts program, opens .desktop files with assoc...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Quicklaunch (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-10 03:56 UTC by Luca Beltrame
Modified: 2022-05-10 09:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2022-05-10 03:56:54 UTC
SUMMARY

Note: this may be a bug in a Framework or elsewhere, but this is where it manifests itself.

Since about one week (today: 2022-05-10) the Quick Launch applet does no longer start added applications, but instead opens them with the program associated to .desktop files (in this case, it ended up being Kate). 

STEPS TO REPRODUCE
1.  Add a Quick Launch applet to the desktop
2. Add any launcher (e.g. Konsole)
3. Click on Konsole

OBSERVED RESULT

The associated application for .desktop files opens (in my case, Kate).

EXPECTED RESULT

Konsole (or any other application added) should launch.

SOFTWARE/OS VERSIONS

KDE Plasma Version: Latest master as of 2022-05-09
KDE Frameworks Version: Latest master as of 2022-05-09
Qt Version:  5.15.3 + KDE patches
Comment 1 Nicolas Fella 2022-05-10 09:14:00 UTC
Git commit 450361eafe0f9048a70ebb1ff3b4da061d68afd0 by Nicolas Fella.
Committed on 10/05/2022 at 08:19.
Pushed by nicolasfella into branch 'master'.

[applets/quicklaunch] Fix launching apps

The url to run is usually a desktop file

Enable executing it instead of opening in a text editor

M  +1    -0    applets/quicklaunch/plugin/quicklaunch_p.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/450361eafe0f9048a70ebb1ff3b4da061d68afd0