[applets/quicklaunch] Fix launching apps

The url to run is usually a desktop file

Enable executing it instead of opening in a text editor

BUG: 453608